(env
 (dev
  (flags
   (:standard -warn-error -A))))

(executable
 (public_name tetriml)
 (name tetriml_bin)
 (modules tetriml_bin)
 (libraries tetriml gamelle.sdl))

(rule
 (target tetriml_bin.ml)
 (action
  (with-stdout-to
   tetriml_bin.ml
   (run echo "include Tetriml"))))

(executable
 (name tetriml_js)
 (modules tetriml_js)
 (modes js)
 (libraries tetriml gamelle.jsoo))

(rule
 (target tetriml_js.ml)
 (action
  (with-stdout-to
   tetriml_js.ml
   (run echo "include Tetriml"))))

(rule
 (target tetriml.html)
 (deps tetriml.template.html tetriml_js.bc.js)
 (action
  (with-stdout-to
   tetriml.html
   (run
    %{bin:gamelle}
    html
    --template=tetriml.template.html
    --script=tetriml_js.bc.js))))
